--- a/views/successForm.html
+++ b/views/successForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
+    <title>Shop</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -13,12 +13,13 @@
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/shop">Shop</a></li>
                 <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
-                <li class="main-header__item"><a href="/contactUs">Contact Us</a></li>
+                <li class="main-header__item"><a class="active" href="/contactUs">Contact Us</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <h1>Error 404: Page Not Found</h1>
+        <h1>Form successfuly filled</h1>
     </main>
 </body>
 </html>
